--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,14 @@
     transform: rotate(360deg);
   }
 }
+@keyframes replace {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.replace {
+  animation: replace 1s;
+}
